--- a/Project-File/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project-File/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ bUseUnsortedMenus=False
 CoordSystem=1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Assets
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 AssetDialog.ThumbnailSizeGrid=3
 AssetDialog.ThumbnailSizeList=3
@@ -265,7 +265,7 @@ ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
 LastLevel=/Game/Environment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
@@ -1890,8 +1890,8 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/Control
 RecentsFiles=D:/UE/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/Window_2
-MRUItem1=/Game/Environment
+MRUItem0=/Game/Environment
+MRUItem1=/Game/Assets/Window_2
 MRUItem2=/Game/ThirdPerson/Lvl_ThirdPerson
 MRUItem3=/Game/LevelPrototyping/Materials/Emissive
 
